@@ -19,27 +19,30 @@ package org.apache.hop.workflow.actions.evalfilesmetrics;
 
 import java.io.IOException;
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import lombok.Getter;
+import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.vfs2.AllFileSelector;
 import org.apache.commons.vfs2.FileObject;
 import org.apache.commons.vfs2.FileSelectInfo;
 import org.apache.commons.vfs2.FileType;
-import org.apache.hop.core.Const;
 import org.apache.hop.core.ICheckResult;
 import org.apache.hop.core.Result;
 import org.apache.hop.core.ResultFile;
 import org.apache.hop.core.RowMetaAndData;
 import org.apache.hop.core.annotations.Action;
 import org.apache.hop.core.exception.HopException;
-import org.apache.hop.core.exception.HopXmlException;
 import org.apache.hop.core.util.Utils;
 import org.apache.hop.core.variables.IVariables;
 import org.apache.hop.core.vfs.HopVfs;
-import org.apache.hop.core.xml.XmlHandler;
 import org.apache.hop.i18n.BaseMessages;
+import org.apache.hop.metadata.api.HopMetadataProperty;
+import org.apache.hop.metadata.api.IEnumHasCodeAndDescription;
 import org.apache.hop.metadata.api.IHopMetadataProvider;
 import org.apache.hop.workflow.WorkflowMeta;
 import org.apache.hop.workflow.action.ActionBase;
@@ -49,7 +52,6 @@ import org.apache.hop.workflow.action.validator.ActionValidatorUtils;
 import org.apache.hop.workflow.action.validator.AndValidator;
 import org.apache.hop.workflow.action.validator.ValidatorContext;
 import org.apache.hop.workflow.engine.IWorkflowEngine;
-import org.w3c.dom.Node;
 
 /** This defines a 'evaluate files metrics' action. */
 @Action(
@@ -60,295 +62,119 @@ import org.w3c.dom.Node;
     categoryDescription = "i18n:org.apache.hop.workflow:ActionCategory.Category.Conditions",
     keywords = "i18n::ActionEvalFilesMetrics.keyword",
     documentationUrl = "/workflow/actions/evalfilesmetrics.html")
+@Getter
+@Setter
 @SuppressWarnings("java:S1104")
 public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAction {
   private static final Class<?> PKG = ActionEvalFilesMetrics.class;
 
-  public static final int SUCCESS_NUMBER_CONDITION_EQUAL = 0;
-  public static final int SUCCESS_NUMBER_CONDITION_DIFFERENT = 1;
-  public static final int SUCCESS_NUMBER_CONDITION_SMALLER = 2;
-  public static final int SUCCESS_NUMBER_CONDITION_SMALLER_EQUAL = 3;
-  public static final int SUCCESS_NUMBER_CONDITION_GREATER = 4;
-  public static final int SUCCESS_NUMBER_CONDITION_GREATER_EQUAL = 5;
-  public static final int SUCCESS_NUMBER_CONDITION_BETWEEN = 6;
-  public static final int SUCCESS_NUMBER_CONDITION_IN_LIST = 7;
-  public static final int SUCCESS_NUMBER_CONDITION_NOT_IN_LIST = 8;
-  private static final String CONST_SPACE = "          ";
-  private static final String CONST_SPACE_SHORT = "      ";
+  public static final BigDecimal ONE = new BigDecimal(1);
+
   private static final String CONST_CAN_NOT_FIND_FIELD =
       "ActionEvalFilesMetrics.Error.CanNotFindField";
   private static final String CONST_COMPARE_WITH_VALUE =
       "ActionEvalFilesMetrics.Log.CompareWithValue";
 
-  public static final String[] successNumberConditionCode =
-      new String[] {
-        "equal",
-        "different",
-        "smaller",
-        "smallequal",
-        "greater",
-        "greaterequal",
-        "between",
-        "inlist",
-        "notinlist"
-      };
+  public static final String YES = "Y";
+  public static final String NO = "N";
 
-  public static final String[] successNumberConditionDesc =
-      new String[] {
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenEqual.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenDifferent.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenSmallThan.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenSmallOrEqualThan.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenGreaterThan.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenGreaterOrEqualThan.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessBetween.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenInList.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenNotInList.Label"),
-      };
-
-  public static final BigDecimal ONE = new BigDecimal(1);
-
-  public static final String[] IncludeSubFoldersDesc =
+  public static final String[] NO_YES =
       new String[] {
         BaseMessages.getString(PKG, "System.Combo.No"),
         BaseMessages.getString(PKG, "System.Combo.Yes")
       };
-  public static final String[] IncludeSubFoldersCodes = new String[] {"N", "Y"};
-  private static final String YES = "Y";
-  private static final String NO = "N";
 
-  public static final String[] scaleDesc =
-      new String[] {
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.Bytes.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.KBytes.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.MBytes.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.GBytes.Label")
-      };
-  public static final String[] scaleCodes = new String[] {"bytes", "kbytes", "mbytes", "gbytes"};
-  public static final int SCALE_BYTES = 0;
-  public static final int SCALE_KBYTES = 1;
-  public static final int SCALE_MBYTES = 2;
-  public static final int SCALE_GBYTES = 3;
+  @HopMetadataProperty(key = "scale", storeWithCode = true)
+  private Scale scale;
 
-  public int scale;
+  @HopMetadataProperty(key = "source_files", storeWithCode = true)
+  private SourceFilesType sourceFilesType;
 
-  public static final String[] SourceFilesDesc =
-      new String[] {
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SourceFiles.Files.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SourceFiles.FilenamesResult.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SourceFiles.PreviousResult.Label"),
-      };
-  public static final String[] SourceFilesCodes =
-      new String[] {"files", "filenamesresult", "previousresult"};
-  public static final int SOURCE_FILES_FILES = 0;
-  public static final int SOURCE_FILES_FILENAMES_RESULT = 1;
-  public static final int SOURCE_FILES_PREVIOUS_RESULT = 2;
+  @HopMetadataProperty(key = "evaluation_type", storeWithCode = true)
+  private EvaluationType evaluationType;
 
-  public int sourceFiles;
+  @HopMetadataProperty(key = "comparevalue")
+  private String compareValue;
 
-  public static final String[] EvaluationTypeDesc =
-      new String[] {
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.EvaluationType.Size.Label"),
-        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.EvaluationType.Count.Label"),
-      };
-  public static final String[] EvaluationTypeCodes =
-      new String[] {
-        "size", "count",
-      };
-  public static final int EVALUATE_TYPE_SIZE = 0;
-  public static final int EVALUATE_TYPE_COUNT = 1;
+  @HopMetadataProperty(key = "minvalue")
+  private String minValue;
 
-  public int evaluationType;
+  @HopMetadataProperty(key = "maxvalue")
+  private String maxValue;
 
-  private String comparevalue;
-  private String minvalue;
-  private String maxvalue;
-  private int successConditionType;
+  @HopMetadataProperty(key = "successnumbercondition", storeWithCode = true)
+  private SuccesConditionType successConditionType;
 
+  @HopMetadataProperty(key = "result_filenames_wildcard")
   private String resultFilenamesWildcard;
 
-  public boolean argFromPrevious;
+  @HopMetadataProperty(key = "field", groupKey = "fields")
+  private List<SourceFile> sourceFiles;
 
-  private String[] sourceFileFolder;
-  private String[] sourceWildcard;
-  private String[] sourceIncludeSubfolders;
-
-  private BigDecimal evaluationValue;
-  private BigDecimal filesCount;
-  private long nrErrors;
-
+  @HopMetadataProperty(key = "Result_field_file")
   private String resultFieldFile;
-  private String resultFieldWildcard;
-  private String resultFieldIncludesubFolders;
 
-  private BigDecimal compareValue;
-  private BigDecimal minValue;
-  private BigDecimal maxValue;
+  @HopMetadataProperty(key = "Result_field_wildcard")
+  private String resultFieldWildcard;
+
+  @HopMetadataProperty(key = "Result_field_includesubfolders")
+  private String resultFieldIncludeSubFolders;
+
+  private BigDecimal realCompareValue;
+  private BigDecimal realMinValue;
+  private BigDecimal realMaxValue;
+  private BigDecimal realEvaluationValue;
+  private BigDecimal realFilesCount;
+  private long nrErrors;
 
   public ActionEvalFilesMetrics(String n) {
     super(n, "");
-    sourceFileFolder = null;
-    sourceWildcard = null;
-    sourceIncludeSubfolders = null;
-    scale = SCALE_BYTES;
-    sourceFiles = SOURCE_FILES_FILES;
-    evaluationType = EVALUATE_TYPE_SIZE;
-    successConditionType = SUCCESS_NUMBER_CONDITION_GREATER;
-    resultFilenamesWildcard = null;
-    resultFieldFile = null;
-    resultFieldWildcard = null;
-    resultFieldIncludesubFolders = null;
+    scale = Scale.BYTES;
+    sourceFilesType = SourceFilesType.FILES;
+    evaluationType = EvaluationType.SIZE;
+    successConditionType = SuccesConditionType.GREATER;
   }
 
   public ActionEvalFilesMetrics() {
     this("");
+    sourceFiles = new ArrayList<>();
   }
 
-  public void allocate(int nrFields) {
-    sourceFileFolder = new String[nrFields];
-    sourceWildcard = new String[nrFields];
-    sourceIncludeSubfolders = new String[nrFields];
+  public ActionEvalFilesMetrics(ActionEvalFilesMetrics a) {
+    super(a);
+    this.scale = a.scale;
+    this.sourceFilesType = a.sourceFilesType;
+    this.evaluationType = a.evaluationType;
+    this.compareValue = a.compareValue;
+    this.minValue = a.minValue;
+    this.maxValue = a.maxValue;
+    this.successConditionType = a.successConditionType;
+    this.resultFilenamesWildcard = a.resultFilenamesWildcard;
+    this.resultFieldFile = a.resultFieldFile;
+    this.resultFieldWildcard = a.resultFieldWildcard;
+    this.resultFieldIncludeSubFolders = a.resultFieldIncludeSubFolders;
+    this.realCompareValue = a.realCompareValue;
+    this.realMinValue = a.realMinValue;
+    this.realMaxValue = a.realMaxValue;
+    this.realEvaluationValue = a.realEvaluationValue;
+    this.realFilesCount = a.realFilesCount;
+    this.nrErrors = a.nrErrors;
+    this.sourceFiles = new ArrayList<>();
+    a.sourceFiles.forEach(f -> this.sourceFiles.add(new SourceFile(f)));
   }
 
   @Override
   public Object clone() {
-    ActionEvalFilesMetrics je = (ActionEvalFilesMetrics) super.clone();
-    if (sourceFileFolder != null) {
-      int nrFields = sourceFileFolder.length;
-      je.allocate(nrFields);
-      System.arraycopy(sourceFileFolder, 0, je.sourceFileFolder, 0, nrFields);
-      System.arraycopy(sourceWildcard, 0, je.sourceWildcard, 0, nrFields);
-      System.arraycopy(sourceIncludeSubfolders, 0, je.sourceIncludeSubfolders, 0, nrFields);
-    }
-    return je;
+    return new ActionEvalFilesMetrics(this);
   }
 
   @Override
-  public String getXml() {
-    StringBuilder retval = new StringBuilder(300);
-
-    retval.append(super.getXml());
-    retval
-        .append(CONST_SPACE_SHORT)
-        .append(XmlHandler.addTagValue("result_filenames_wildcard", resultFilenamesWildcard));
-    retval
-        .append(CONST_SPACE_SHORT)
-        .append(XmlHandler.addTagValue("Result_field_file", resultFieldFile));
-    retval
-        .append(CONST_SPACE_SHORT)
-        .append(XmlHandler.addTagValue("Result_field_wildcard", resultFieldWildcard));
-    retval
-        .append(CONST_SPACE_SHORT)
-        .append(
-            XmlHandler.addTagValue("Result_field_includesubfolders", resultFieldIncludesubFolders));
-
-    retval.append("      <fields>").append(Const.CR);
-    if (sourceFileFolder != null) {
-      for (int i = 0; i < sourceFileFolder.length; i++) {
-        retval.append("        <field>").append(Const.CR);
-        retval
-            .append(CONST_SPACE)
-            .append(XmlHandler.addTagValue("source_filefolder", sourceFileFolder[i]));
-        retval.append(CONST_SPACE).append(XmlHandler.addTagValue("wildcard", sourceWildcard[i]));
-        retval
-            .append(CONST_SPACE)
-            .append(XmlHandler.addTagValue("include_subFolders", sourceIncludeSubfolders[i]));
-        retval.append("        </field>").append(Const.CR);
-      }
-    }
-    retval.append("      </fields>").append(Const.CR);
-    retval.append(CONST_SPACE_SHORT).append(XmlHandler.addTagValue("comparevalue", comparevalue));
-    retval.append(CONST_SPACE_SHORT).append(XmlHandler.addTagValue("minvalue", minvalue));
-    retval.append(CONST_SPACE_SHORT).append(XmlHandler.addTagValue("maxvalue", maxvalue));
-    retval
-        .append(CONST_SPACE_SHORT)
-        .append(
-            XmlHandler.addTagValue(
-                "successnumbercondition", getSuccessNumberConditionCode(successConditionType)));
-    retval
-        .append(CONST_SPACE_SHORT)
-        .append(XmlHandler.addTagValue("source_files", getSourceFilesCode(sourceFiles)));
-    retval
-        .append(CONST_SPACE_SHORT)
-        .append(XmlHandler.addTagValue("evaluation_type", getEvaluationTypeCode(evaluationType)));
-    retval.append(CONST_SPACE_SHORT).append(XmlHandler.addTagValue("scale", getScaleCode(scale)));
-    return retval.toString();
-  }
-
-  public static String getIncludeSubFolders(String tt) {
-    if (tt == null) {
-      return IncludeSubFoldersCodes[0];
-    }
-    if (tt.equals(IncludeSubFoldersDesc[1])) {
-      return IncludeSubFoldersCodes[1];
-    } else {
-      return IncludeSubFoldersCodes[0];
-    }
-  }
-
-  public static String getIncludeSubFoldersDesc(String tt) {
-    if (tt == null) {
-      return IncludeSubFoldersDesc[0];
-    }
-    if (tt.equals(IncludeSubFoldersCodes[1])) {
-      return IncludeSubFoldersDesc[1];
-    } else {
-      return IncludeSubFoldersDesc[0];
-    }
-  }
-
-  @Override
-  public void loadXml(Node entrynode, IHopMetadataProvider metadataProvider, IVariables variables)
-      throws HopXmlException {
-    try {
-      super.loadXml(entrynode);
-
-      Node fields = XmlHandler.getSubNode(entrynode, "fields");
-
-      // How many field arguments?
-      int nrFields = XmlHandler.countNodes(fields, "field");
-      allocate(nrFields);
-
-      // Read them all...
-      for (int i = 0; i < nrFields; i++) {
-        Node fnode = XmlHandler.getSubNodeByNr(fields, "field", i);
-
-        sourceFileFolder[i] = XmlHandler.getTagValue(fnode, "source_filefolder");
-        sourceWildcard[i] = XmlHandler.getTagValue(fnode, "wildcard");
-        sourceIncludeSubfolders[i] = XmlHandler.getTagValue(fnode, "include_subFolders");
-      }
-
-      resultFilenamesWildcard = XmlHandler.getTagValue(entrynode, "result_filenames_wildcard");
-      resultFieldFile = XmlHandler.getTagValue(entrynode, "result_field_file");
-      resultFieldWildcard = XmlHandler.getTagValue(entrynode, "result_field_wildcard");
-      resultFieldIncludesubFolders =
-          XmlHandler.getTagValue(entrynode, "result_field_includesubfolders");
-      comparevalue = XmlHandler.getTagValue(entrynode, "comparevalue");
-      minvalue = XmlHandler.getTagValue(entrynode, "minvalue");
-      maxvalue = XmlHandler.getTagValue(entrynode, "maxvalue");
-      successConditionType =
-          getSuccessNumberConditionByCode(
-              Const.NVL(XmlHandler.getTagValue(entrynode, "successnumbercondition"), ""));
-      sourceFiles =
-          getSourceFilesByCode(Const.NVL(XmlHandler.getTagValue(entrynode, "source_files"), ""));
-      evaluationType =
-          getEvaluationTypeByCode(
-              Const.NVL(XmlHandler.getTagValue(entrynode, "evaluation_type"), ""));
-      scale = getScaleByCode(Const.NVL(XmlHandler.getTagValue(entrynode, "scale"), ""));
-    } catch (HopXmlException xe) {
-      throw new HopXmlException(
-          BaseMessages.getString(PKG, "ActionEvalFilesMetrics.Error.Exception.UnableLoadXML"), xe);
-    }
-  }
-
-  @Override
-  public Result execute(Result previousResult, int nr) throws HopException {
-    Result result = previousResult;
+  public Result execute(Result result, int nr) throws HopException {
     result.setNrErrors(1);
     result.setResult(false);
 
     List<RowMetaAndData> rows = result.getRows();
-    RowMetaAndData resultRow = null;
+    RowMetaAndData resultRow;
 
     try {
       initMetrics();
@@ -358,19 +184,18 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
     }
 
     // Get source and destination files, also wildcard
-    String[] vSourceFileFolder = sourceFileFolder;
-    String[] vwildcard = sourceWildcard;
-    String[] vincludeSubFolders = sourceIncludeSubfolders;
+    List<SourceFile> vSourceFiles = new ArrayList<>();
+    sourceFiles.forEach(f -> vSourceFiles.add(new SourceFile(f)));
 
-    switch (getSourceFiles()) {
-      case SOURCE_FILES_PREVIOUS_RESULT:
+    switch (getSourceFilesType()) {
+      case PREVIOUS_RESULT:
         // Filenames are retrieved from previous result rows
-
+        //
         String realResultFieldFile = resolve(getResultFieldFile());
         String realResultFieldWildcard = resolve(getResultFieldWildcard());
-        String realResultFieldIncluseSubfolders = resolve(getResultFieldIncludeSubfolders());
+        String realResultFieldIncludeSubfolders = resolve(getResultFieldIncludeSubFolders());
 
-        int indexOfResultFieldFile = -1;
+        int indexOfResultFieldFile;
         if (Utils.isEmpty(realResultFieldFile)) {
           logError(
               BaseMessages.getString(PKG, "ActionEvalFilesMetrics.Error.ResultFieldsFileMissing"));
@@ -389,15 +214,15 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
                   (rows != null ? rows.size() : 0) + ""));
         }
 
-        if (!Utils.isEmpty(rows)) {
+        if (rows != null && !rows.isEmpty()) {
           // We get rows
-          RowMetaAndData firstRow = rows.get(0);
+          RowMetaAndData firstRow = rows.getFirst();
           indexOfResultFieldFile = firstRow.getRowMeta().indexOfValue(realResultFieldFile);
           if (indexOfResultFieldFile == -1) {
             logError(BaseMessages.getString(PKG, CONST_CAN_NOT_FIND_FIELD, realResultFieldFile));
             return result;
           }
-          if (!Utils.isEmpty(realResultFieldWildcard)) {
+          if (StringUtils.isNotEmpty(realResultFieldWildcard)) {
             indexOfResultFieldWildcard =
                 firstRow.getRowMeta().indexOfValue(realResultFieldWildcard);
             if (indexOfResultFieldWildcard == -1) {
@@ -406,13 +231,13 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
               return result;
             }
           }
-          if (!Utils.isEmpty(realResultFieldIncluseSubfolders)) {
+          if (StringUtils.isNotEmpty(realResultFieldIncludeSubfolders)) {
             indexOfResultFieldIncludeSubfolders =
-                firstRow.getRowMeta().indexOfValue(realResultFieldIncluseSubfolders);
+                firstRow.getRowMeta().indexOfValue(realResultFieldIncludeSubfolders);
             if (indexOfResultFieldIncludeSubfolders == -1) {
               logError(
                   BaseMessages.getString(
-                      PKG, CONST_CAN_NOT_FIND_FIELD, realResultFieldIncluseSubfolders));
+                      PKG, CONST_CAN_NOT_FIND_FIELD, realResultFieldIncludeSubfolders));
               return result;
             }
           }
@@ -448,13 +273,12 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
                 vSourceFileFolderPrevious,
                 vWildcardPrevious,
                 vincludeSubFoldersPrevious,
-                parentWorkflow,
-                result);
+                parentWorkflow);
           }
         }
 
         break;
-      case SOURCE_FILES_FILENAMES_RESULT:
+      case FILENAMES_RESULT:
         List<ResultFile> resultFiles = result.getResultFilesList();
         if (isDetailed()) {
           logDetailed(
@@ -484,7 +308,7 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
                   getIt = matcher.matches();
                 }
                 if (getIt) {
-                  getFileSize(file, result, parentWorkflow);
+                  getFileSize(file);
                 }
               }
             } catch (Exception e) {
@@ -510,20 +334,22 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
       default:
         // static files/folders
         // from grid entered by user
-        if (vSourceFileFolder != null && vSourceFileFolder.length > 0) {
-          for (int i = 0; i < vSourceFileFolder.length && !parentWorkflow.isStopped(); i++) {
-
+        if (!vSourceFiles.isEmpty()) {
+          for (SourceFile vSourceFile : vSourceFiles) {
             if (isDetailed()) {
               logDetailed(
                   BaseMessages.getString(
                       PKG,
                       "ActionEvalFilesMetrics.Log.ProcessingRow",
-                      vSourceFileFolder[i],
-                      vwildcard[i]));
+                      vSourceFile.getSourceFileFolder(),
+                      vSourceFile.getSourceWildcard()));
             }
 
             processFileFolder(
-                vSourceFileFolder[i], vwildcard[i], vincludeSubFolders[i], parentWorkflow, result);
+                vSourceFile.getSourceFileFolder(),
+                vSourceFile.getSourceWildcard(),
+                vSourceFile.getSourceIncludeSubfolders(),
+                parentWorkflow);
           }
         } else {
           logError(BaseMessages.getString(PKG, "ActionEvalFilesMetrics.Error.FilesGridEmpty"));
@@ -533,7 +359,7 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
     }
 
     result.setResult(isSuccess());
-    result.setNrErrors(getNrError());
+    result.setNrErrors(getNrErrors());
     displayResults();
 
     return result;
@@ -544,124 +370,106 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
       logDetailed("=======================================");
       logDetailed(
           BaseMessages.getString(
-              PKG, "ActionEvalFilesMetrics.Log.Info.FilesCount", String.valueOf(getFilesCount())));
-      if (evaluationType == EVALUATE_TYPE_SIZE) {
+              PKG,
+              "ActionEvalFilesMetrics.Log.Info.FilesCount",
+              String.valueOf(getRealFilesCount())));
+      if (evaluationType == EvaluationType.SIZE) {
         logDetailed(
             BaseMessages.getString(
                 PKG,
                 "ActionEvalFilesMetrics.Log.Info.FilesSize",
-                String.valueOf(getEvaluationValue())));
+                String.valueOf(getRealEvaluationValue())));
       }
       logDetailed(
           BaseMessages.getString(
-              PKG, "ActionEvalFilesMetrics.Log.Info.NrErrors", String.valueOf(getNrError())));
+              PKG, "ActionEvalFilesMetrics.Log.Info.NrErrors", String.valueOf(getNrErrors())));
       logDetailed("=======================================");
     }
-  }
-
-  private long getNrError() {
-    return this.nrErrors;
-  }
-
-  private BigDecimal getEvaluationValue() {
-    return this.evaluationValue;
-  }
-
-  private BigDecimal getFilesCount() {
-    return this.filesCount;
-  }
-
-  public int getSuccessConditionType() {
-    return successConditionType;
-  }
-
-  public void setSuccessConditionType(int successConditionType) {
-    this.successConditionType = successConditionType;
   }
 
   private boolean isSuccess() {
     boolean retval = false;
 
     switch (successConditionType) {
-      case SUCCESS_NUMBER_CONDITION_EQUAL: // equal
+      case EQUAL: // equal
         if (isDebug()) {
           logDebug(
               BaseMessages.getString(
                   PKG,
                   CONST_COMPARE_WITH_VALUE,
-                  String.valueOf(evaluationValue),
-                  String.valueOf(compareValue)));
+                  String.valueOf(realEvaluationValue),
+                  String.valueOf(realCompareValue)));
         }
-        retval = (getEvaluationValue().compareTo(compareValue) == 0);
+        retval = (getRealEvaluationValue().compareTo(realCompareValue) == 0);
         break;
-      case SUCCESS_NUMBER_CONDITION_DIFFERENT: // different
+      case DIFFERENT: // different
         if (isDebug()) {
           logDebug(
               BaseMessages.getString(
                   PKG,
                   CONST_COMPARE_WITH_VALUE,
-                  String.valueOf(evaluationValue),
-                  String.valueOf(compareValue)));
+                  String.valueOf(realEvaluationValue),
+                  String.valueOf(realCompareValue)));
         }
-        retval = (getEvaluationValue().compareTo(compareValue) != 0);
+        retval = (getRealEvaluationValue().compareTo(realCompareValue) != 0);
         break;
-      case SUCCESS_NUMBER_CONDITION_SMALLER: // smaller
+      case SMALLER: // smaller
         if (isDebug()) {
           logDebug(
               BaseMessages.getString(
                   PKG,
                   CONST_COMPARE_WITH_VALUE,
-                  String.valueOf(evaluationValue),
-                  String.valueOf(compareValue)));
+                  String.valueOf(realEvaluationValue),
+                  String.valueOf(realCompareValue)));
         }
-        retval = (getEvaluationValue().compareTo(compareValue) < 0);
+        retval = (getRealEvaluationValue().compareTo(realCompareValue) < 0);
         break;
-      case SUCCESS_NUMBER_CONDITION_SMALLER_EQUAL: // smaller or equal
+      case SMALLER_EQUAL: // smaller or equal
         if (isDebug()) {
           logDebug(
               BaseMessages.getString(
                   PKG,
                   CONST_COMPARE_WITH_VALUE,
-                  String.valueOf(evaluationValue),
-                  String.valueOf(compareValue)));
+                  String.valueOf(realEvaluationValue),
+                  String.valueOf(realCompareValue)));
         }
-        retval = (getEvaluationValue().compareTo(compareValue) <= 0);
+        retval = (getRealEvaluationValue().compareTo(realCompareValue) <= 0);
         break;
-      case SUCCESS_NUMBER_CONDITION_GREATER: // greater
+      case GREATER: // greater
         if (isDebug()) {
           logDebug(
               BaseMessages.getString(
                   PKG,
                   CONST_COMPARE_WITH_VALUE,
-                  String.valueOf(evaluationValue),
-                  String.valueOf(compareValue)));
+                  String.valueOf(realEvaluationValue),
+                  String.valueOf(realCompareValue)));
         }
-        retval = (getEvaluationValue().compareTo(compareValue) > 0);
+        retval = (getRealEvaluationValue().compareTo(realCompareValue) > 0);
         break;
-      case SUCCESS_NUMBER_CONDITION_GREATER_EQUAL: // greater or equal
+      case GREATER_EQUAL: // greater or equal
         if (isDebug()) {
           logDebug(
               BaseMessages.getString(
                   PKG,
                   CONST_COMPARE_WITH_VALUE,
-                  String.valueOf(evaluationValue),
-                  String.valueOf(compareValue)));
+                  String.valueOf(realEvaluationValue),
+                  String.valueOf(realCompareValue)));
         }
-        retval = (getEvaluationValue().compareTo(compareValue) >= 0);
+        retval = (getRealEvaluationValue().compareTo(realCompareValue) >= 0);
         break;
-      case SUCCESS_NUMBER_CONDITION_BETWEEN: // between min and max
+      case BETWEEN: // between min and max
         if (isDebug()) {
           logDebug(
               BaseMessages.getString(
                   PKG,
                   "ActionEvalFilesMetrics.Log.CompareWithValues",
-                  String.valueOf(evaluationValue),
-                  String.valueOf(minValue),
-                  String.valueOf(maxValue)));
+                  String.valueOf(realEvaluationValue),
+                  String.valueOf(realMinValue),
+                  String.valueOf(realMaxValue)));
         }
         retval =
-            (getEvaluationValue().compareTo(minValue) >= 0
-                && getEvaluationValue().compareTo(maxValue) <= 0);
+            (getRealEvaluationValue().compareTo(realMinValue) >= 0
+                && getRealEvaluationValue().compareTo(realMaxValue) <= 0);
         break;
       default:
         break;
@@ -671,113 +479,51 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
   }
 
   private void initMetrics() {
-    evaluationValue = new BigDecimal(0);
-    filesCount = new BigDecimal(0);
+    realEvaluationValue = new BigDecimal(0);
+    realFilesCount = new BigDecimal(0);
     nrErrors = 0;
 
-    if (successConditionType == SUCCESS_NUMBER_CONDITION_BETWEEN) {
-      minValue = new BigDecimal(resolve(getMinValue()));
-      maxValue = new BigDecimal(resolve(getMaxValue()));
+    if (successConditionType == SuccesConditionType.BETWEEN) {
+      realMinValue = new BigDecimal(resolve(getMinValue()));
+      realMaxValue = new BigDecimal(resolve(getMaxValue()));
     } else {
-      compareValue = new BigDecimal(resolve(getCompareValue()));
+      realCompareValue = new BigDecimal(resolve(getCompareValue()));
     }
 
-    if (evaluationType == EVALUATE_TYPE_SIZE) {
+    if (evaluationType == EvaluationType.SIZE) {
       int multyply = 1;
       switch (getScale()) {
-        case SCALE_KBYTES:
+        case KBYTES:
           multyply = 1024;
           break;
-        case SCALE_MBYTES:
+        case MBYTES:
           multyply = 1048576;
           break;
-        case SCALE_GBYTES:
+        case GBYTES:
           multyply = 1073741824;
           break;
         default:
           break;
       }
 
-      if (successConditionType == SUCCESS_NUMBER_CONDITION_BETWEEN) {
-        minValue = minValue.multiply(BigDecimal.valueOf(multyply));
-        maxValue = maxValue.multiply(BigDecimal.valueOf(multyply));
+      if (successConditionType == SuccesConditionType.BETWEEN) {
+        realMinValue = realMinValue.multiply(BigDecimal.valueOf(multyply));
+        realMaxValue = realMaxValue.multiply(BigDecimal.valueOf(multyply));
       } else {
-        compareValue = compareValue.multiply(BigDecimal.valueOf(multyply));
+        realCompareValue = realCompareValue.multiply(BigDecimal.valueOf(multyply));
       }
     }
-    argFromPrevious = (getSourceFiles() == SOURCE_FILES_PREVIOUS_RESULT);
   }
 
   private void incrementErrors() {
     nrErrors++;
   }
 
-  public int getSourceFiles() {
-    return this.sourceFiles;
-  }
-
-  private void incrementFilesCount() {
-    filesCount = filesCount.add(ONE);
-  }
-
-  public String[] getSourceFileFolder() {
-    return sourceFileFolder;
-  }
-
-  public void setSourceFileFolder(String[] sourceFileFolder) {
-    this.sourceFileFolder = sourceFileFolder;
-  }
-
-  public String[] getSourceWildcard() {
-    return sourceWildcard;
-  }
-
-  public void setSourceWildcard(String[] sourceWildcard) {
-    this.sourceWildcard = sourceWildcard;
-  }
-
-  public String[] getSourceIncludeSubfolders() {
-    return sourceIncludeSubfolders;
-  }
-
-  public void setSourceIncludeSubfolders(String[] sourceIncludeSubfolders) {
-    this.sourceIncludeSubfolders = sourceIncludeSubfolders;
-  }
-
-  public void setSourceFiles(int sourceFiles) {
-    this.sourceFiles = sourceFiles;
-  }
-
-  public String getResultFieldFile() {
-    return this.resultFieldFile;
-  }
-
-  public void setResultFieldFile(String field) {
-    this.resultFieldFile = field;
-  }
-
-  public String getResultFieldWildcard() {
-    return this.resultFieldWildcard;
-  }
-
-  public void setResultFieldWildcard(String field) {
-    this.resultFieldWildcard = field;
-  }
-
-  public String getResultFieldIncludeSubfolders() {
-    return this.resultFieldIncludesubFolders;
-  }
-
-  public void setResultFieldIncludeSubfolders(String field) {
-    this.resultFieldIncludesubFolders = field;
-  }
-
   private void processFileFolder(
       String sourcefilefoldername,
       String wildcard,
       String includeSubfolders,
-      IWorkflowEngine<WorkflowMeta> parentWorkflow,
-      Result result) {
+      IWorkflowEngine<WorkflowMeta> parentWorkflow) {
 
     FileObject sourcefilefolder = null;
     FileObject currentFile = null;
@@ -807,7 +553,7 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
         if (sourcefilefolder.getType() == FileType.FILE) {
           // We deals here with a file
           // let's get file size
-          getFileSize(sourcefilefolder, result, parentWorkflow);
+          getFileSize(sourcefilefolder);
 
         } else if (sourcefilefolder.getType() == FileType.FOLDER) {
           // We have a folder
@@ -855,12 +601,12 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
                 // Not in the Base Folder..Only if include sub folders
                 if (includeSubFolders
                     && getFileWildcard(currentFile.getName().getBaseName(), realWildcard)) {
-                  getFileSize(currentFile, result, parentWorkflow);
+                  getFileSize(currentFile);
                 }
               } else {
                 // In the base folder
                 if (getFileWildcard(currentFile.getName().getBaseName(), realWildcard)) {
-                  getFileSize(currentFile, result, parentWorkflow);
+                  getFileSize(currentFile);
                 }
               }
             }
@@ -906,35 +652,33 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
     }
   }
 
-  private void getFileSize(
-      FileObject file, Result result, IWorkflowEngine<WorkflowMeta> parentWorkflow) {
+  private void getFileSize(FileObject file) {
     try {
-
-      incrementFilesCount();
+      // Count every processed file (both SIZE and COUNT evaluation types); this running total is
+      // surfaced in the logs. The @HopMetadataProperty rewrite dropped this increment, leaving the
+      // reported file count stuck at 0.
+      realFilesCount = realFilesCount.add(ONE);
       if (isDetailed()) {
         logDetailed(
             BaseMessages.getString(
                 PKG,
                 "ActionEvalFilesMetrics.Log.GetFile",
                 file.toString(),
-                String.valueOf(getFilesCount())));
+                String.valueOf(getRealFilesCount())));
       }
-      switch (evaluationType) {
-        case EVALUATE_TYPE_SIZE:
-          BigDecimal fileSize = BigDecimal.valueOf(file.getContent().getSize());
-          evaluationValue = evaluationValue.add(fileSize);
-          if (isDebug()) {
-            logDebug(
-                BaseMessages.getString(
-                    PKG,
-                    "ActionEvalFilesMetrics.Log.AddedFileSize",
-                    String.valueOf(fileSize),
-                    file.toString()));
-          }
-          break;
-        default:
-          evaluationValue = evaluationValue.add(ONE);
-          break;
+      if (evaluationType == EvaluationType.SIZE) {
+        BigDecimal fileSize = BigDecimal.valueOf(file.getContent().getSize());
+        realEvaluationValue = realEvaluationValue.add(fileSize);
+        if (isDebug()) {
+          logDebug(
+              BaseMessages.getString(
+                  PKG,
+                  "ActionEvalFilesMetrics.Log.AddedFileSize",
+                  String.valueOf(fileSize),
+                  file.toString()));
+        }
+      } else {
+        realEvaluationValue = realEvaluationValue.add(ONE);
       }
     } catch (Exception e) {
       incrementErrors();
@@ -945,241 +689,21 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
   }
 
   /**
-   * @param selectedfile
-   * @param wildcard
-   * @return True if the selectedfile matches the wildcard
+   * @param selectedFile The selected file
+   * @param wildcard The wildcard
+   * @return True if the selected file matches the wildcard
    */
-  private boolean getFileWildcard(String selectedfile, String wildcard) {
-    Pattern pattern = null;
+  private boolean getFileWildcard(String selectedFile, String wildcard) {
+    Pattern pattern;
     boolean getIt = true;
 
     if (!Utils.isEmpty(wildcard)) {
       pattern = Pattern.compile(wildcard);
       // First see if the file matches the regular expression!
-      if (pattern != null) {
-        Matcher matcher = pattern.matcher(selectedfile);
-        getIt = matcher.matches();
-      }
+      Matcher matcher = pattern.matcher(selectedFile);
+      getIt = matcher.matches();
     }
-
     return getIt;
-  }
-
-  public void setMinValue(String minvalue) {
-    this.minvalue = minvalue;
-  }
-
-  public String getMinValue() {
-    return minvalue;
-  }
-
-  public void setCompareValue(String comparevalue) {
-    this.comparevalue = comparevalue;
-  }
-
-  public String getCompareValue() {
-    return comparevalue;
-  }
-
-  public void setResultFilenamesWildcard(String resultwildcard) {
-    this.resultFilenamesWildcard = resultwildcard;
-  }
-
-  public String getResultFilenamesWildcard() {
-    return this.resultFilenamesWildcard;
-  }
-
-  public void setMaxValue(String maxvalue) {
-    this.maxvalue = maxvalue;
-  }
-
-  public String getMaxValue() {
-    return maxvalue;
-  }
-
-  public static String getSuccessNumberConditionCode(int i) {
-    if (i < 0 || i >= successNumberConditionCode.length) {
-      return successNumberConditionCode[0];
-    }
-    return successNumberConditionCode[i];
-  }
-
-  public static int getSuccessNumberConditionByCode(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < successNumberConditionCode.length; i++) {
-      if (successNumberConditionCode[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-    return 0;
-  }
-
-  public static String getSuccessNumberConditionDesc(int i) {
-    if (i < 0 || i >= successNumberConditionDesc.length) {
-      return successNumberConditionDesc[0];
-    }
-    return successNumberConditionDesc[i];
-  }
-
-  public static int getSuccessNumberConditionByDesc(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < successNumberConditionDesc.length; i++) {
-      if (successNumberConditionDesc[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-
-    // If this fails, try to match using the code.
-    return getSuccessNumberByCode(tt);
-  }
-
-  private static int getSuccessNumberByCode(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < successNumberConditionCode.length; i++) {
-      if (successNumberConditionCode[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-    return 0;
-  }
-
-  public static int getScaleByDesc(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < scaleDesc.length; i++) {
-      if (scaleDesc[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-
-    // If this fails, try to match using the code.
-    return getScaleByCode(tt);
-  }
-
-  public static int getSourceFilesByDesc(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < SourceFilesDesc.length; i++) {
-      if (SourceFilesDesc[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-
-    // If this fails, try to match using the code.
-    return getSourceFilesByCode(tt);
-  }
-
-  public static int getEvaluationTypeByDesc(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < EvaluationTypeDesc.length; i++) {
-      if (EvaluationTypeDesc[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-
-    // If this fails, try to match using the code.
-    return getEvaluationTypeByCode(tt);
-  }
-
-  private static int getScaleByCode(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < scaleCodes.length; i++) {
-      if (scaleCodes[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-    return 0;
-  }
-
-  private static int getSourceFilesByCode(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < SourceFilesCodes.length; i++) {
-      if (SourceFilesCodes[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-    return 0;
-  }
-
-  private static int getEvaluationTypeByCode(String tt) {
-    if (tt == null) {
-      return 0;
-    }
-
-    for (int i = 0; i < EvaluationTypeCodes.length; i++) {
-      if (EvaluationTypeCodes[i].equalsIgnoreCase(tt)) {
-        return i;
-      }
-    }
-    return 0;
-  }
-
-  public static String getScaleDesc(int i) {
-    if (i < 0 || i >= scaleDesc.length) {
-      return scaleDesc[0];
-    }
-    return scaleDesc[i];
-  }
-
-  public static String getEvaluationTypeDesc(int i) {
-    if (i < 0 || i >= EvaluationTypeDesc.length) {
-      return EvaluationTypeDesc[0];
-    }
-    return EvaluationTypeDesc[i];
-  }
-
-  public static String getSourceFilesDesc(int i) {
-    if (i < 0 || i >= SourceFilesDesc.length) {
-      return SourceFilesDesc[0];
-    }
-    return SourceFilesDesc[i];
-  }
-
-  public static String getScaleCode(int i) {
-    if (i < 0 || i >= scaleCodes.length) {
-      return scaleCodes[0];
-    }
-    return scaleCodes[i];
-  }
-
-  public static String getSourceFilesCode(int i) {
-    if (i < 0 || i >= SourceFilesCodes.length) {
-      return SourceFilesCodes[0];
-    }
-    return SourceFilesCodes[i];
-  }
-
-  public static String getEvaluationTypeCode(int i) {
-    if (i < 0 || i >= EvaluationTypeCodes.length) {
-      return EvaluationTypeCodes[0];
-    }
-    return EvaluationTypeCodes[i];
-  }
-
-  public int getScale() {
-    return this.scale;
   }
 
   @Override
@@ -1205,13 +729,152 @@ public class ActionEvalFilesMetrics extends ActionBase implements Cloneable, IAc
     AndValidator.putValidators(
         ctx, ActionValidatorUtils.notNullValidator(), ActionValidatorUtils.fileExistsValidator());
 
-    for (int i = 0; i < sourceFileFolder.length; i++) {
-      ActionValidatorUtils.andValidator().validate(this, "arguments[" + i + "]", remarks, ctx);
+    for (int i = 0; i < sourceFiles.size(); i++) {
+      ActionValidatorUtils.andValidator().validate(this, "arguments[" + (i++) + "]", remarks, ctx);
     }
   }
 
   @Override
   public boolean isEvaluation() {
     return true;
+  }
+
+  @Getter
+  public enum Scale implements IEnumHasCodeAndDescription {
+    BYTES("bytes", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.Bytes.Label")),
+    KBYTES("kbytes", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.KBytes.Label")),
+    MBYTES("mbytes", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.MBytes.Label")),
+    GBYTES("gbytes", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.GBytes.Label")),
+    ;
+    final String code;
+    final String description;
+
+    Scale(String code, String description) {
+      this.code = code;
+      this.description = description;
+    }
+
+    public static String[] getDescriptions() {
+      return IEnumHasCodeAndDescription.getDescriptions(Scale.class);
+    }
+
+    public static Scale lookupDescription(String description) {
+      return IEnumHasCodeAndDescription.lookupDescription(Scale.class, description, BYTES);
+    }
+  }
+
+  @Getter
+  public enum SuccesConditionType implements IEnumHasCodeAndDescription {
+    EQUAL("equal", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenEqual.Label")),
+    DIFFERENT(
+        "different",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenDifferent.Label")),
+    SMALLER(
+        "smaller",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenSmallThan.Label")),
+    SMALLER_EQUAL(
+        "smallequal",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenSmallOrEqualThan.Label")),
+    GREATER(
+        "greater",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenGreaterThan.Label")),
+    GREATER_EQUAL(
+        "greaterequal",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenGreaterOrEqualThan.Label")),
+    BETWEEN("between", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessBetween.Label")),
+    IN_LIST(
+        "inlist", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenInList.Label")),
+    NOT_IN_LIST(
+        "notinlist",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SuccessWhenNotInList.Label")),
+    ;
+    final String code;
+    final String description;
+
+    SuccesConditionType(String code, String description) {
+      this.code = code;
+      this.description = description;
+    }
+
+    public static String[] getDescriptions() {
+      return IEnumHasCodeAndDescription.getDescriptions(SuccesConditionType.class);
+    }
+
+    public static SuccesConditionType lookupDescription(String description) {
+      return IEnumHasCodeAndDescription.lookupDescription(
+          SuccesConditionType.class, description, EQUAL);
+    }
+  }
+
+  @Getter
+  public enum EvaluationType implements IEnumHasCodeAndDescription {
+    SIZE("size", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.EvaluationType.Size.Label")),
+    COUNT(
+        "count", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.EvaluationType.Count.Label"));
+    final String code;
+    final String description;
+
+    EvaluationType(String code, String description) {
+      this.code = code;
+      this.description = description;
+    }
+
+    public static String[] getDescriptions() {
+      return IEnumHasCodeAndDescription.getDescriptions(EvaluationType.class);
+    }
+
+    public static EvaluationType lookupDescription(String description) {
+      return IEnumHasCodeAndDescription.lookupDescription(EvaluationType.class, description, SIZE);
+    }
+  }
+
+  @Getter
+  public enum SourceFilesType implements IEnumHasCodeAndDescription {
+    FILES("files", BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SourceFiles.Files.Label")),
+    FILENAMES_RESULT(
+        "filenamesresult",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SourceFiles.FilenamesResult.Label")),
+    PREVIOUS_RESULT(
+        "previousresult",
+        BaseMessages.getString(PKG, "ActionEvalFilesMetrics.SourceFiles.PreviousResult.Label")),
+    ;
+    final String code;
+    final String description;
+
+    SourceFilesType(String code, String description) {
+      this.code = code;
+      this.description = description;
+    }
+
+    public static String[] getDescriptions() {
+      return IEnumHasCodeAndDescription.getDescriptions(SourceFilesType.class);
+    }
+
+    public static SourceFilesType lookupDescriptions(String description) {
+      return IEnumHasCodeAndDescription.lookupDescription(
+          SourceFilesType.class, description, FILES);
+    }
+  }
+
+  @Getter
+  @Setter
+  public static final class SourceFile {
+    @HopMetadataProperty(key = "source_filefolder")
+    private String sourceFileFolder;
+
+    @HopMetadataProperty(key = "wildcard")
+    private String sourceWildcard;
+
+    @HopMetadataProperty(key = "include_subFolders")
+    private String sourceIncludeSubfolders;
+
+    public SourceFile() {}
+
+    public SourceFile(SourceFile f) {
+      this();
+      this.sourceFileFolder = f.sourceFileFolder;
+      this.sourceWildcard = f.sourceWildcard;
+      this.sourceIncludeSubfolders = f.sourceIncludeSubfolders;
+    }
   }
 }
