@@ -18,6 +18,7 @@
 
 package org.apache.hop.pipeline.transforms.jsonoutputenhanced;
 
+import static org.apache.hop.core.util.Utils.isEmpty;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -27,6 +28,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Objects;
+import org.apache.hop.core.Const;
 import org.apache.hop.core.xml.XmlHandler;
 import org.apache.hop.metadata.serializer.memory.MemoryMetadataProvider;
 import org.apache.hop.metadata.serializer.xml.XmlMetadataUtil;
@@ -34,6 +36,60 @@ import org.apache.hop.pipeline.transform.TransformMeta;
 import org.junit.jupiter.api.Test;
 
 class JsonEOutputMetaTest {
+
+  @Test
+  void newMeta_defaultJsonBlocIsEmpty() {
+    assertTrue(isEmpty(new JsonEOutputMeta().getJsonBloc()));
+  }
+
+  @Test
+  void deserializeSelfClosingJsonBloc_overridesConstructor() throws Exception {
+    String xml =
+        """
+        <transform>
+          <outputValue>prompt</outputValue>
+          <jsonBloc/>
+          <operation_type>outputvalue</operation_type>
+          <use_arrays_with_single_instance>N</use_arrays_with_single_instance>
+          <use_single_item_per_group>N</use_single_item_per_group>
+          <json_prittified>N</json_prittified>
+          <encoding>UTF-8</encoding>
+          <addtoresult>N</addtoresult>
+          <file>
+            <name/>
+            <split_output_after>0</split_output_after>
+            <extention>json</extention>
+            <append>N</append>
+            <split>N</split>
+            <haspartno>N</haspartno>
+            <add_date>N</add_date>
+            <add_time>N</add_time>
+            <create_parent_folder>N</create_parent_folder>
+            <doNotOpenNewFileInit>N</doNotOpenNewFileInit>
+          </file>
+          <additional_fields>
+            <json_size_field/>
+          </additional_fields>
+          <key_fields/>
+          <fields>
+            <field>
+              <name>role</name>
+              <element>role</element>
+              <json_fragment>N</json_fragment>
+              <is_without_enclosing>N</is_without_enclosing>
+              <remove_if_blank>Y</remove_if_blank>
+            </field>
+          </fields>
+        </transform>
+        """;
+    JsonEOutputMeta meta = new JsonEOutputMeta();
+    XmlMetadataUtil.deSerializeFromXml(
+        XmlHandler.loadXmlString(xml, TransformMeta.XML_TAG),
+        JsonEOutputMeta.class,
+        meta,
+        new MemoryMetadataProvider());
+    assertTrue(isEmpty(meta.getJsonBloc()));
+  }
 
   @Test
   void testLoadSave() throws Exception {
@@ -70,7 +126,7 @@ class JsonEOutputMetaTest {
     assertTrue(meta.getFileSettings().isCreateParentFolder());
     assertFalse(meta.getFileSettings().isDateInFileName());
     assertTrue(meta.getFileSettings().isDoNotOpenNewFileInit());
-    assertEquals("UTF-8", meta.getEncoding());
+    assertEquals(Const.UTF_8, meta.getEncoding());
     assertEquals("json", meta.getFileSettings().getExtension());
     assertFalse(meta.getFileSettings().isFileAppended());
     assertEquals("filename", meta.getFileSettings().getFileName());
@@ -82,7 +138,7 @@ class JsonEOutputMetaTest {
 
     assertNotNull(meta.getOutputFields());
     assertEquals(3, meta.getOutputFields().size());
-    JsonEOutputField f1 = meta.getOutputFields().get(0);
+    JsonEOutputField f1 = meta.getOutputFields().getFirst();
     assertEquals("f1", f1.getFieldName());
     assertEquals("element1", f1.getElementName());
 
